--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
 ---
 layout: page
-title: Hi, I'm Desh
-subtitle: PhD student in Speech Recognition
+title: Hi, I'm Little Sheep
+subtitle: PhD student in Statistics
 use-site-title: true
 ---
 
-<br>I am a PhD student at <a href="https://www.cs.jhu.edu/">Johns Hopkins University</a>, working in the <a
-	href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing (CLSP)</a>, advised by <a
-	href="https://clsp.wse.jhu.edu/faculty-pages/sanjeev/">Sanjeev Khudanpur</a> and <a
-	href="http://www.danielpovey.com/">Dan Povey</a>. My research interests lie in the application of machine learning
-methods for speech and language tasks. I am currently working on <b>speech recognition</b> and <b>speaker
-	diarization</b> for multi-talker recordings. I am generously funded by an <a
-	href="https://ai2ai.engineering.jhu.edu/2022-2023-ai2ai-fellows/">AI2AI fellowship</a> for 2022-23.<br><br>
-
-I have interned in the speech groups at Microsoft (in 2021) and Meta (in 2022). Previously,
-I graduated from IIT Guwahati in 2017 with a major in Computer Science.<br><br>
-
-<!--  My bachelor thesis was on deep learning methods
-for relation extraction in clinical text, supervised by <a href="http://www.iitg.ac.in/anand.ashish/index.html">Ashish
-	Anand</a>.<br><br> -->
-
-When I’m not doing ML, I like to work out, climb boulders, play guitar, and <a
-	href="https://www.goodreads.com/review/list/62772844-desh-raj?shelf=read&sort=date_read">read fiction</a>.<br>
+<br>I am a PhD student at <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, working in the <a
+	href="https://www.sta.cuhk.edu.hk/">the department of statistics</a>, advised by <a
+	href="https://www.sta.cuhk.edu.hk/peoples/hywong/">Professor Wong Hoi Ying</a>. Before joining Prof. Wong's team,
+        I received my bachelor's degree in Statistics from Sun Yat-Sen University in 2023. I feel fortunate to get instructions
+        about survival analysis and causal inference from <a 
+	href="https://sites.google.com/site/yingyanuw/">Professor Yan Ying</a>. <br><br>
 
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
