--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Cantonese to ease my life in Hong Kong.
 <b>Hobby:</b><br><br>
 
 <ul>
-	<li> Play Volleyball (It really helps me to be a better man and know some excellent person)
+	<li> Play Volleyball (It really helps me to be a better man and know some excellent people)
 	</li><br>
 
 	<li> Sing songs
