Revise educational details in index.html
Updated educational background and added additional professors.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@ subtitle: PhD student in Statistics
 use-site-title: true
 ---
 
-<br>I am a PhD student at <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, working in the <a
-	href="https://www.sta.cuhk.edu.hk/">the department of statistics</a>, advised by <a
-	href="https://www.sta.cuhk.edu.hk/peoples/hywong/">Professor Wong Hoi Ying</a>. Before joining Prof. Wong's team,
+<br>I obtained MPhil in statistics from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, working in the <a
+	href="https://www.sta.cuhk.edu.hk/">the department of statistics</a>, supervised by <a
+	href="https://www.sta.cuhk.edu.hk/peoples/hywong/">Professor Wong Hoi Ying</a>, <a
+	href="https://www.med.cuhk.edu.hk/staff/professor-wong-lai-hung-grace/">Professor Wong Lai Hung</a>, and <a
+	href="https://mdac.cuhk.edu.hk/members/dr-terry-cheuk-fung-yip/">Professor Cheuk-Fung Yip</a>. Before CUHK,
         I received my bachelor's degree in Statistics from Sun Yat-Sen University in 2023. I feel fortunate to get instructions
         about survival analysis and causal inference from <a 
 	href="https://sites.google.com/site/yingyanuw/">Professor Yan Ying</a>. <br><br>
