--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Boey
-subtitle: PhD student in Statistics
+subtitle: MPhil student in Statistics
 use-site-title: true
 ---
 
